--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
         <!-- ===============    favicon link     =============== -->
-        <link rel="icon" type="image/png" href="images/jk-images/favicon-jk.ico" />
+        <link rel="icon" type="image/png" href="assets/favicon-jk.ico" />
 
         <!-- ===============    Bootstrap core CSS     =============== -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
