create portfolio layout

--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 layout: default
 title: Jamie Kwan | Experience Design
 ---
-
-
-
         <!-- START page title section -->
         <div class="page-title">
             <div class="container">
@@ -36,7 +33,7 @@ title: Jamie Kwan | Experience Design
             <!-- work grid -->
             <div class="work-grids-area hover-one masonry" id="atom-works-grid">
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item architectural interactive">
-                   <a href="projects/ad-astra.html">
+                   <a href="projects/ad-astra">
                        <img src="assets/projects/ad-astra.jpg" alt="" class="img-responsive">
                        <div class="desc ">
                            <h5><span>Ad&nbsp;Astra</span></h5>
