--- a/projects/ad-astra.html
+++ b/projects/ad-astra.html
@@ -1,5 +1,5 @@
 ---
-layout: portfolio-item
+layout: portfolio
 title: Ad Astra
 
 subheading: <b><span class="theme-color">Sic itur ad astra: 'thus you shall go to the stars'.</span></b> Designing a large-scale artistic intervention for Toronto's busiest all-night art festival.
