--- a/projects/ad-astra.html
+++ b/projects/ad-astra.html
@@ -1,6 +1,7 @@
 ---
 layout: portfolio
 title: Ad Astra
+subheading: "Sic itur ad astra: 'thus you shall go to the stars'. Designing a large-scale artistic intervention for Toronto's busiest all-night art festival."
 
 ---
 
