portfolio layout full build-out

--- a/projects/ad-astra.html
+++ b/projects/ad-astra.html
@@ -1,7 +1,22 @@
 ---
 layout: portfolio
 title: Ad Astra
-featureimg: ad-astra2
+featureimg: ad-astra
+summary: "This is test text to see if this fucking section will <span class="theme-color">finally</span> work now"
+
+images:
+  - image_path: ../assets/projects/ad-astra/5.jpg
+    title: Ad Astra
+  - image_path: ../assets/projects/ad-astra/3.jpg
+    title: Ad Astra
+  - image_path: ../assets/projects/ad-astra/6.jpg
+    title: Ad Astra
+  - image_path: ../assets/projects/ad-astra/1.jpg
+    title: Ad Astra
+  - image_path: ../assets/projects/ad-astra/2.jpg
+    title: Ad Astra
+  - image_path: ../assets/projects/ad-astra/4.jpg
+    title: Ad Astra
 
 ---
 
