--- a/projects/ad-astra.html
+++ b/projects/ad-astra.html
@@ -2,6 +2,7 @@
 layout: portfolio
 title: Ad Astra
 featureimg: ad-astra
+oneliner: "this is a one-liner. it describes something for the sake of something"
 challenge: "Transform a 400 sqft lunchroom into a temporary destination."
 
 images:
@@ -20,12 +21,12 @@ images:
 
 ---
 
+<div class="col-md-8">
+    <p>Ad Astra was an interactive experience that immersed visitors into an infinite night sky and created a quiet — but memorable — retreat from a festival known for crowds and late-night antics across the City of Toronto. One of the core goals of the project was to create a simple, photogenic intervention that the general public could relate to, and become an active participant in the experience.</p>
 
+    <p>The room – approximately 20x20 feet in size – was filled with over 150 spherical lights, and clad from floor-to-ceiling in mirrored acrylic panels to create an infinite night sky. Visitors were invited to enter into the space — eight at a time – to explore. Open-ended interactions encouraged exploration, and upon discovery of "trigger" lights, the overall space responded with location-specific music and lighting changes in sync to the audio. Beyond the visual experience, Ad Astra turned small visitor interactions into large spatial responses.</p>
 
+    <blockquote class="secondary"><i>"Once inside the dreamlike (or was I just dreaming?) space, there was a <span class="theme-color">sense of peacefulness </span>amongst those enjoying the aesthetically pleasing, almost <span class="theme-color">otherworldly void </span>we found ourselves a part of."</i><p><span class="detail">Rhys Male, ARTORONTO Magazine</span></p></blockquote>
 
-            <div class="col-md-8">
-                <p>Ad Astra was an interactive experience that immersed visitors into an infinite night sky and created a quiet — but memorable — retreat from a festival known for crowds and late-night antics across the City of Toronto. One of the core goals of the project was to create a simple, photogenic intervention that the general public could relate to, and become an active participant in the experience.</p>
-                <p>The room – approximately 20x20 feet in size – was filled with over 150 spherical lights, and clad from floor-to-ceiling in mirrored acrylic panels to create an infinite night sky. Visitors were invited to enter into the space — eight at a time – to explore. Open-ended interactions encouraged exploration, and upon discovery of "trigger" lights, the overall space responded with location-specific music and lighting changes in sync to the audio. Beyond the visual experience, Ad Astra turned small visitor interactions into large spatial responses.</p>
-                <blockquote class="secondary"><i>"Once inside the dreamlike (or was I just dreaming?) space, there was a <span class="theme-color">sense of peacefulness </span>amongst those enjoying the aesthetically pleasing, almost <span class="theme-color">otherworldly void </span>we found ourselves a part of."</i><p><span class="detail">Rhys Male, ARTORONTO Magazine</span></p></blockquote>
-                <p>This installation was a collaboration between 7 architecture grads, a biomedical engineer, a musician, and a sound engineer, and completed as part of ReduxLab at Ryerson University. The installation was exhibited as part of Scotiabank’s Nuit Blanche 2013, Toronto’s largest all-night public art festival, and named amongst the 'Must-See Independent Exhibits' by Designlines Magazine.</p>
-            </div>
+    <p>This installation was a collaboration between 7 architecture grads, a biomedical engineer, a musician, and a sound engineer, and completed as part of ReduxLab at Ryerson University. The installation was exhibited as part of Scotiabank’s Nuit Blanche 2013, Toronto’s largest all-night public art festival, and named amongst the 'Must-See Independent Exhibits' by Designlines Magazine.</p>
+</div>
