--- a/projects/ad-astra.html
+++ b/projects/ad-astra.html
@@ -2,7 +2,7 @@
 layout: portfolio
 title: Ad Astra
 featureimg: ad-astra
-oneliner: "this is a one-liner. it describes something for the sake of something"
+oneliner: "<b><span class="theme-color">Sic itur ad astra: 'thus you shall go to the stars'.</span></b> Designing a large-scale artistic intervention for Toronto's busiest all-night art festival."
 challenge: "Transform a 400 sqft lunchroom into a temporary destination."
 
 images:
