--- a/projects/ad-astra.html
+++ b/projects/ad-astra.html
@@ -2,7 +2,8 @@
 layout: portfolio
 title: Ad Astra
 featureimg: ad-astra
-oneliner: "Sic itur ad astra: 'thus you shall go to the stars'. Designing a large-scale artistic intervention for Toronto's busiest all-night art festival."
+slogan: "Sic itur ad astra: 'thus you shall go to the stars'."
+oneliner: "Designing a large-scale artistic intervention for Toronto's busiest all-night art festival."
 challenge: "Transform a 400 sqft lunchroom into a temporary destination."
 
 images:
