test project details in markup

--- a/projects/ad-astra.html
+++ b/projects/ad-astra.html
@@ -20,6 +20,11 @@ images:
   - image_path: ../assets/projects/ad-astra/4.jpg
     title: Ad Astra
 
+category: "Interactive Exhibition"
+client: "Bata Shoe Museum / Nuit Blanche"
+date: "March - October 2013"
+team: "Neveen Abdel-Aal, Ryan Giuricich, Kevin Pu, Helena Skoneiczna, Setareh Shams, Sandra Wojteki, Marcelle Longlade, Jesse Allen, Michael Tai"
+
 ---
 
 <div class="col-md-8">
