--- a/projects/china-study.html
+++ b/projects/china-study.html
@@ -4,7 +4,7 @@ title: China Sketchbook
 featureimg: china-study
 slogan: 
 oneliner: "Capturing Chinese Architecture and Culture through Pen &amp; Paper."
-challenge: 
+challenge: "Use sketching as a form of design-research and observation."
 
 images:
   - image_path: ../assets/projects/china-study/4.jpg
@@ -25,7 +25,7 @@ team:
 
 ---
 
-<p>Along with 15 other students, this trip took me through Eastern and Northern China, starting in Beijing - the People's Capital - and ending in the metropolis of Shanghai. Areas covered included the rural Shanxi province, visiting the Yungang Grottoes and Ancient Capital of Xi'an, as well as the Hubei province, staying at the China Three Gorges University and touring the Yangtze River and Shennongjia Mountain region."Use sketching as a form of design-research and observation."</p>
+<p>Along with 15 other students, this trip took me through Eastern and Northern China, starting in Beijing - the People's Capital - and ending in the metropolis of Shanghai. Areas covered included the rural Shanxi province, visiting the Yungang Grottoes and Ancient Capital of Xi'an, as well as the Hubei province, staying at the China Three Gorges University and touring the Yangtze River and Shennongjia Mountain region.</p>
 
 <p>Sketching was used as a main method for exploring the culture and architecture of traditional and modern Chinese sites, practicing sketching as a method of note-taking and analysis. A core theme throughout the trip was in the analysis of sustainable practices at both ancient and modern sites: architecturally and socially. This trip culminated in the <a href="../projects/ctgu" target="_blank">concept masterplan</a> of a Water Science Facility on the main campus of China Three Gorges University.</p>
 
