--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item interactive digital architectural">
-                   <a href="single-portfolio.html">
+                   <a href="projects/thesis">
                        <img src="assets/projects/thesis.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>"Form&nbsp;Follows&nbsp;Narrative"</span></h5>
@@ -51,7 +51,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item interactive architectural digital">
-                   <a href="single-portfolio.html">
+                   <a href="projects/creative-catalyst">
                        <img src="assets/projects/creative-catalyst.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>Creative&nbsp;Catalyst</span></h5>
@@ -60,7 +60,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item interactive">
-                   <a href="single-portfolio.html">
+                   <a href="projects/sandbox">
                        <img src="assets/projects/sandbox.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>Augmented&nbsp;Reality&nbsp;Sandbox</span></h5>
@@ -69,7 +69,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item digital">
-                   <a href="single-portfolio.html">
+                   <a href="projects/freeform">
                        <img src="assets/projects/freeform.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>Free&nbsp;Form</span></h5>
@@ -78,7 +78,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item passion digital interactive">
-                   <a href="single-portfolio.html">
+                   <a href="projects/studiobud">
                        <img src="assets/projects/studiobud2.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>Studio&nbsp;Bud</span></h5>
@@ -87,7 +87,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item passion">
-                   <a href="single-portfolio.html">
+                   <a href="projects/china-study">
                        <img src="assets/projects/china-study.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>Travel&nbsp;Sketches&nbsp;Vol.&nbsp;1</span></h5>
@@ -96,7 +96,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item digital passion">
-                   <a href="single-portfolio.html">
+                   <a href="projects/narrative-drive">
                        <img src="assets/projects/narrative-drive.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>Narrative&nbsp;Drive</span></h5>
@@ -105,7 +105,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item architectural">
-                   <a href="projects/bee-hotel.html">
+                   <a href="projects/bee-hotel">
                        <img src="assets/projects/bee-hotel.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>Wild&nbsp;for&nbsp;Bees</span></h5>
@@ -114,7 +114,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item architectural">
-                   <a href="single-portfolio.html">
+                   <a href="projects/ctgu">
                        <img src="assets/projects/ctgu.jpg" alt="" class="img-responsive">
                        <div class="desc">
                            <h5><span>CTGU&nbsp;Water&nbsp;Science&nbsp;Center</span></h5>
@@ -123,7 +123,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item architectural">
-                   <a href="single-portfolio.html">
+                   <a href="projects/grenadier-pav">
                        <img src="assets/projects/grenadier-pav.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>Grenadier&nbsp;Pavilion</span></h5>
@@ -132,7 +132,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item architectural">
-                   <a href="single-portfolio.html">
+                   <a href="projects/george-condo">
                        <img src="assets/projects/george-condo.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>George&nbsp;St&nbsp;Condo</span></h5>
@@ -141,7 +141,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item architectural">
-                   <a href="single-portfolio.html">
+                   <a href="projects/tracecase">
                        <img src="assets/projects/tracecase.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>TraceCase</span></h5>
