--- a/projects/china-study.html
+++ b/projects/china-study.html
@@ -1,9 +1,9 @@
 ---
 layout: portfolio
-title: China Sketchbook
+title: China Sketchbook Vol 1
 featureimg: china-study
-slogan: 
-oneliner: "Capturing Chinese Architecture and Culture through Pen &amp; Paper."
+slogan: A study in ink.
+oneliner: "Capturing Chinese architecture and culture through pen &amp; paper."
 challenge: "Use sketching as a form of design-research and observation."
 
 images:
@@ -18,7 +18,7 @@ images:
   - image_path: ../assets/projects/china-study/2.jpg
     title: China Sketchbook
 
-category: "Sketchbook"
+category: "Travel Sketchbook"
 client: 
 date: "April - June 2012"
 team: 
