test typed.js addition

--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 layout: default
 title: Jamie Kwan | Experience Design
 ---
+<script src="js/typed.js"></script>
+<script>
+	document.addEventListener("DOMContentLoaded", function(){
+		Typed.new(".typed", {
+			strings: ["First sentence.", "Second sentence."],
+			typeSpeed: 0
+		});
+	});
+</script>
+
+
         <!-- START page title section -->
         <div class="page-title">
             <div class="container">
                 <div class="row">
                     <div class="col-md-7 col-xs-12">
-                        <h1>Great experiences inspire <span class="theme-color">play and curiosity*</span></h1>
+                        <h1 class="typed">Great experiences inspire <span class="theme-color">play and curiosity*</span></h1>
                         <img src="images/branding-border.png" alt="" class="heading-border">
                         <p>*As a <strong><a href="http://jamiemkwan.com/profile" class="designer">designer</a> / <a href="http://jamiemkwan.com/profile" class="urbanist">strategist</a> / <a href="http://jamiemkwan.com/profile" class="storyteller">storyteller</a></strong>, I create digital, physical, and often <i>phygital</i> experiences that connect people with messages, stories, and each other.</p>
                     </div>
