--- a/projects/china-study.html
+++ b/projects/china-study.html
@@ -1,6 +1,6 @@
 ---
 layout: portfolio
-title: China Sketchbook Vol 1
+title: Travel Sketches Vol 1
 featureimg: china-study
 slogan: A study in ink.
 oneliner: "Capturing Chinese architecture and culture through pen &amp; paper."
