--- a/projects/creative-catalyst.html
+++ b/projects/creative-catalyst.html
@@ -1,47 +1,46 @@
 ---
 layout: portfolio
 title: Creative Catalyst
-heading: "Interactive Exhibit that Brought Out the Kid in Everyone."
-info: "Creative Catalyst Symposium, Ryerson University."
-extra: 
-featureimage_url: "../assets/images/projects/creative-catalyst(2).jpg"
-concept: 
-
-challenge: "Design a large-scale art installation with the aim to bring together a diverse group of individuals in conversation about the role of art in city building."
-
-solution: "The exhibit features micro-interactions that brings out one's inner child amongst a more serious environment of discussion: to engage participants in 'critical play'. Nostalgic creative actions (doodling without an eraser, weaving colourful yarn, and folding paper) help create a child-like atmosphere to allow participants to think freely about art as an agent for change."
+featureimg: creative-catalyst
+slogan: "Interactive Exhibit"
+oneliner: "that brought out the kid in everyone."
+challenge: "Design an experience that brings together artists and academics."
 
 images:
-  - image_path: ../assets/images/projects/creative-catalyst/7.jpg
+  - image_path: ../assets/projects/creative-catalyst/7.jpg
     title: Creative Catalyst
-  - image_path: ../assets/images/projects/creative-catalyst/2.jpg
+  - image_path: ../assets/projects/creative-catalyst/2.jpg
     title: Creative Catalyst
-  - image_path: ../assets/images/projects/creative-catalyst/4.jpg
+  - image_path: ../assets/projects/creative-catalyst/4.jpg
     title: Creative Catalyst
-  - image_path: ../assets/images/projects/creative-catalyst/8.jpg
+  - image_path: ../assets/projects/creative-catalyst/8.jpg
     title: Creative Catalyst
-  - image_path: ../assets/images/projects/creative-catalyst/6.jpg
+  - image_path: ../assets/projects/creative-catalyst/6.jpg
     title: Creative Catalyst
-  - image_path: ../assets/images/projects/creative-catalyst/9.jpg
+  - image_path: ../assets/projects/creative-catalyst/9.jpg
     title: Creative Catalyst
-  - image_path: ../assets/images/projects/creative-catalyst/11.jpg
+  - image_path: ../assets/projects/creative-catalyst/11.jpg
     title: Creative Catalyst
-
-process:
-  - image_path: ../assets/images/projects/creative-catalyst/p1.jpg
+  - image_path: ../assets/projects/creative-catalyst/p1.jpg
     title: Creative Catalyst
     data: Concept Rendering
-  - image_path: ../assets/images/projects/creative-catalyst/p2.jpg
+  - image_path: ../assets/projects/creative-catalyst/p2.jpg
     title: Creative Catalyst
     data: Prototype + Lighting Tests
-  - image_path: ../assets/images/projects/creative-catalyst/p3.jpg
+  - image_path: ../assets/projects/creative-catalyst/p3.jpg
     title: Creative Catalyst
     data: Prototype + Lighting Tests
-  - image_path: ../assets/images/projects/creative-catalyst/p4.jpg
+  - image_path: ../assets/projects/creative-catalyst/p4.jpg
     title: Creative Catalyst
     data: UX Design - Drawing Interaction
 
+category: "Interactive Exhibition"
+client: "Creative Catalyst Symposium, Ryerson University"
+date: "June 2015"
+team: "Bodhi Collective, Madeleine Collective"
+
 ---
+<div class="col-md-8">
 
 This interactive installation attempted to act as a social mechanism for creative and collaborative interactions amongst artists and policy makers. The symposium had a key focus on the connections, systems and future of our city, so the overall exhibit asked participants: <i>What Can Art Do For You?</i>
 
@@ -49,38 +48,4 @@ This interactive installation attempted to act as a social mechanism for creativ
 
 I acted as one of the lead designers, alongside <a href="http://madeleineco.com/" target="_blank">Madeleine Co</a>, for this exhibition and installation, overlooking both physical and digital design.
 
-<div class="row">
-	<hr>
-	{% for image in page.images %}
-	<div class="col-md-3 col-sm-6 col-xl-3">
-		<a href="{{ image.image_path }}" data-lightbox="creative-catalyst">
-		<img src="{{ image.image_path }}" alt="{{ image.title }}" class="sm-img img-responsive"/>
-		</a>
-	</div>
-	{% endfor %}
-</div>
-
-<div class="row">
-	<hr>
-	<p><span class="detail">Process</span></p>
-	{% for image in page.process %}
-	<div class="col-md-3 col-sm-6 col-xl-3">
-		<a href="{{ image.image_path }}" data-lightbox="creative-catalyst" data-title="{{ image.data }}">
-		<img src="{{ image.image_path }}" alt="{{ image.title }}" class="sm-img img-responsive"/>
-		</a>
-	</div>
-	{% endfor %}
-</div>
-
-<hr>
-
-<div class="text-muted">
-  <p><span class="detail">Project Details</span></p>
-	<ul>
-		<li>Team: BODHI COLLECTIVE, MADELEINE CO.</li>
-		<li>Material Sponsor - The Paper Place</li>
-		<li>Software: Arduino, Processing</li>
-		<li><a href="https://dl.dropboxusercontent.com/u/18399884/creative%20catalyst-instagram%20sample.m4v" target="_blank">Video - Interactive Lighting</a> (Instagram, June 2015)</li>
-	  	<li><a href="http://www.creativecatalyst15.com/" target="_blank">Creative Catalyst Symposium</a></li>
-	</ul>
 </div>
