--- a/projects/creative-catalyst.html
+++ b/projects/creative-catalyst.html
@@ -2,9 +2,9 @@
 layout: portfolio
 title: Creative Catalyst
 featureimg: creative-catalyst
-slogan: "Interactive Exhibit"
-oneliner: "that brought out the kid in everyone."
-challenge: "Design an experience that brings together artists and academics."
+slogan: "An interactive, immersive and nostalgic exhibit"
+oneliner: "that brought out the kid in everyone. Creative Catalyst was a large-scale digital-physical experience that generated conversations amongst a unique multidisciplinary group."
+challenge: "Design an experience that brings together artists and academics in conversation about city building."
 
 images:
   - image_path: ../assets/projects/creative-catalyst/7.jpg
