--- a/projects/creative-catalyst.html
+++ b/projects/creative-catalyst.html
@@ -41,11 +41,9 @@ team: "Bodhi Collective, Madeleine Collective"
 
 ---
 <div class="col-md-8">
+  <p>This interactive installation attempted to act as a social mechanism for creative and collaborative interactions amongst artists and policy makers. The symposium had a key focus on the connections, systems and future of our city, so the overall exhibit asked participants: <i>What Can Art Do For You?</i></p>
 
-This interactive installation attempted to act as a social mechanism for creative and collaborative interactions amongst artists and policy makers. The symposium had a key focus on the connections, systems and future of our city, so the overall exhibit asked participants: <i>What Can Art Do For You?</i>
+  <p>'Critical Play' emerged as a core concept as a result of the design process. The conversations that occur in serendipitous moments of play were weaved into various aspects of the installation: digital sketching, playing with string, and interacting with clothes pins all form experiences that attempt to 'free' the mind surrounding more serious conversations. It speaks to the role art can play in thinking about city building.</p>
 
-'Critical Play' emerged as a core concept as a result of the design process. The conversations that occur in serendipitous moments of play were weaved into various aspects of the installation: digital sketching, playing with string, and interacting with clothes pins all form experiences that attempt to 'free' the mind surrounding more serious conversations. It speaks to the role art can play in thinking about city building.
-
-I acted as one of the lead designers, alongside <a href="http://madeleineco.com/" target="_blank">Madeleine Co</a>, for this exhibition and installation, overlooking both physical and digital design.
-
+  <p>I acted as one of the lead designers, alongside <a href="http://madeleineco.com/" target="_blank">Madeleine Co</a>, for this exhibition and installation, overlooking both physical and digital design.</p>
 </div>
