add cube hotel to index

--- a/index.html
+++ b/index.html
@@ -114,6 +114,15 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item architectural">
+                   <a href="projects/cube-hotel">
+                       <img src="assets/projects/cube-hotel.jpg" alt="" class="img-responsive">
+                       <div class="desc">
+                           <h5><span>CUBE&nbsp;Hotel</span></h5>
+                           <p>Concept Design - Competition</p>
+                       </div>
+                   </a>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item architectural">
                    <a href="projects/ctgu">
                        <img src="assets/projects/ctgu.jpg" alt="" class="img-responsive">
                        <div class="desc">
