adjust imagery and text

--- a/projects/cube-hotel.html
+++ b/projects/cube-hotel.html
@@ -23,8 +23,12 @@ images:
     title: CUBE Hotel
   - image_path: ../assets/projects/cube-hotel/9.jpg
     title: CUBE Hotel
+  - image_path: ../assets/projects/cube-hotel/3.jpg
+    title: CUBE Hotel
+  - image_path: ../assets/projects/cube-hotel/10.jpg
+    title: CUBE Hotel
 
-category: "Concept Design - Competition"
+category: "Concept Design"
 client: "Radical Innovations in Hospitality Competition"
 date: "April 2013"
 team: "Ilda Hysa"
