--- a/projects/ctgu.html
+++ b/projects/ctgu.html
@@ -28,14 +28,14 @@ images:
 
 category: "Concept Masterplan"
 client: "China Three Gorges University"
-date: "June 2012"
-team: "H.NEAL, with G.LIU, G.PAN, M.YANG, Y.LI, F.LI (CTGU)"
+date: "May - June 2012"
+team: "Hilary Neal"
 
 ---
 <div class="col-md-8">
   <p>A collaboration between Ryerson University and China Three Gorge's University's (CTGU), the project called on the master plan of their Water Science facilities in conjunction with the construction of a new hydro dam.</p>
 
-  <p>The design explores concepts in identity, landscape and interdisciplinary research. The academic departments are combined into one megastructure — a new reform towards cross-disciplinary innovation. Its minimal footprint creates new opportunities for public space on the water, intersecting academics and play. The natural wetland is maximized as an asset to the site, rather than an obstacle for development.</p>
+  <p>The design explores concepts in identity, landscape and interdisciplinary research. The academic departments are combined into one megastructure — a new reform towards cross-disciplinary innovation. Its minimal footprint creates new opportunities for public space on the water, intersecting academics and play. The natural wetland is maximized as an asset to the site, rather than an obstacle for development, allowing water to freely flow under the building. A system of mycofiltration (fungi as filters) embedded within the floating pedestrian walkways purifies urban run-off down the surrounding hill, before entering the campus waterways.</p>
 
   <p>This project was the culmination of travelling across Eastern and Northern China, as documented through <a href="/projects/china-study" target="_blank">sketching.</a></p>
 </div>
