--- a/projects/freeform.html
+++ b/projects/freeform.html
@@ -1,40 +1,42 @@
 ---
 layout: portfolio
-title: FreeForm
-heading: "Equal parts creative tool, marketplace, and community."
-info: "Democratizing 3D Printing for the Masses."
-extra: 
-featureimage_url: "../assets/images/projects/freeform.jpg"
+title: Free Form
+featureimg: freeform
+slogan: "Democratizing 3D Printing for the Masses."
+oneliner: "Equal parts creative tool, marketplace, and community. A digital product that pairs simple and familiar UI parametric modelling, to bring personalized 3D printing to the masses. FreeForm empowers the creation of meaningful 3D printed products."
+challenge: "Create a digital experience that bridges the gap between the general public and complex 3D printing."
 
-challenge: "Bridge the gap between the general public and complex 3D modelling / printing. "
-
-solution: "A digital product that pairs simple and familiar UI parametric modelling, to bring personalized 3D printing to the masses. FreeForm empowers the creation of meaningful 3D printed products."
+category: "Experience Design"
+client: 
+date: "November 2014"
+team: "Josh Clavir, Greg Phillips"
 
 images:
-  - image_path: ../assets/images/projects/freeform/1.jpg
+  - image_path: ../assets/projects/freeform/1.jpg
     title: FreeForm
-  - image_path: ../assets/images/projects/freeform/3.jpg
+  - image_path: ../assets/projects/freeform/3.jpg
     title: FreeForm
-  - image_path: ../assets/images/projects/freeform/4.jpg
+  - image_path: ../assets/projects/freeform/4.jpg
     title: FreeForm
-  - image_path: ../assets/images/projects/freeform/2.jpg
+  - image_path: ../assets/projects/freeform/2.jpg
     title: FreeForm
-
-process:
-  - image_path: ../assets/images/projects/freeform/8.jpg
+  - image_path: ../assets/projects/freeform/8.jpg
     title: FreeForm
-  - image_path: ../assets/images/projects/freeform/7.jpg
+  - image_path: ../assets/projects/freeform/7.jpg
     title: FreeForm
-  - image_path: ../assets/images/projects/freeform/5.jpg
+  - image_path: ../assets/projects/freeform/5.jpg
     title: FreeForm
-  - image_path: ../assets/images/projects/freeform/9.jpg
+  - image_path: ../assets/projects/freeform/9.jpg
     title: FreeForm
-  - image_path: ../assets/images/projects/freeform/6.jpg
+  - image_path: ../assets/projects/freeform/6.jpg
     title: FreeForm
     
 ---
+<div class="col-md-8">
+<p>The biggest potential of 3D printing is its capacity for design democratization. We empower consumers to become active participants in the creation of their products by bridging the gap between 3D modelling and 3D printing, as well as the gap between 3D designers and consumers. </p>
 
-The biggest potential of 3D printing is its capacity for design democratization. We empower consumers to become active participants in the creation of their products by bridging the gap between 3D modelling and 3D printing, as well as the gap between 3D designers and consumers. Our mobile app uses parametric design (data-driven design) to make anyone a 3D designer, allowing for designs to be printed to personal specifications – whether biometrics (perfect wearables) or just a personal keepsake!
+<p>Our mobile app uses parametric design (data-driven design) to make anyone a 3D designer, allowing for designs to be printed to personal specifications – whether biometrics (perfect wearables) or just a personal keepsake!</p>
+</div>
 
 <div class="row">
 	<div class="col-md-10 col-md-offset-1 col-xl-10 col-xl-offset-1">
@@ -42,37 +44,4 @@ The biggest potential of 3D printing is its capacity for design democratization.
 			<p align="center"><iframe class="embed-responsive-item" src="https://player.vimeo.com/video/176622179?title=0&byline=0&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
 		</div>
 	</div>
-</div>
-
-<div class="row">
-	<hr>
-	{% for image in page.images %}
-	<div class="col-md-3 col-sm-6 col-xl-3">
-		<a href="{{ image.image_path }}" data-lightbox="freeform">
-		<img src="{{ image.image_path }}" alt="{{ image.title }}" class="sm-img img-responsive"/>
-		</a>
-	</div>
-	{% endfor %}
-</div>
-
-<div class="row">
-  <hr>
-  <p><span class="detail">Process</span></p>
-  {% for image in page.process %}
-  <div class="col-md-3 col-sm-6 col-xl-3">
-    <a href="{{ image.image_path }}" data-lightbox="freeform">
-    <img src="{{ image.image_path }}" alt="{{ image.title }}" class="sm-img img-responsive"/>
-    </a>
-  </div>
-  {% endfor %}
-</div>
-
-<hr>
-
-<div class="text-muted">
-  <p><span class="detail">Project Details</span></p>
-	<ul>
-		<li>Team: J.CLAVIR, G.PHILLIPS</li>
-		<li>Software: Photoshop, Illustrator, InVision (UX MockUp)</li>
-	</ul>
 </div>
