add curiosity in focus

--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@ title: Jamie Kwan | Experience Design
                        </div>
                    </a>
                 </div>
+                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item interactive">
+                   <a href="projects/curiosityinfocus">
+                       <img src="assets/projects/curiosityinfocus.jpg" alt="" class="img-responsive">
+                       <div class="desc text-center">
+                           <h5><span>Curiosity&nbsp;in&nbsp;Focus</span></h5>
+                           <p>Podcast &amp; Brand Identity</p>
+                       </div>
+                   </a>
+                </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item digital">
                    <a href="projects/freeform">
                        <img src="assets/projects/freeform.jpg" alt="" class="img-responsive">
