add curiosity in focus

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ title: Jamie Kwan | Experience Design
                        </div>
                    </a>
                 </div>
-                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item interactive digital architectural">
+                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item interactive digital">
                    <a href="projects/thesis">
                        <img src="assets/projects/thesis.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
@@ -50,7 +50,7 @@ title: Jamie Kwan | Experience Design
                        </div>
                    </a>
                 </div>
-                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item interactive architectural digital">
+                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item interactive digital">
                    <a href="projects/creative-catalyst">
                        <img src="assets/projects/creative-catalyst.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
@@ -68,7 +68,7 @@ title: Jamie Kwan | Experience Design
                        </div>
                    </a>
                 </div>
-                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item interactive">
+                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item digital">
                    <a href="projects/curiosityinfocus">
                        <img src="assets/projects/curiosityinfocus.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
@@ -86,7 +86,7 @@ title: Jamie Kwan | Experience Design
                        </div>
                    </a>
                 </div>
-                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item passion digital interactive">
+                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item passion">
                    <a href="projects/studiobud">
                        <img src="assets/projects/studiobud2.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
@@ -95,7 +95,7 @@ title: Jamie Kwan | Experience Design
                        </div>
                    </a>
                 </div>
-                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item passion">
+                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item passion architectural">
                    <a href="projects/china-study">
                        <img src="assets/projects/china-study.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
@@ -118,7 +118,7 @@ title: Jamie Kwan | Experience Design
                        <img src="assets/projects/bee-hotel.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>Wild&nbsp;for&nbsp;Bees</span></h5>
-                           <p>Educational Campaign</p>
+                           <p>Branded Educational Campaign</p>
                        </div>
                    </a>
                 </div>
@@ -127,7 +127,7 @@ title: Jamie Kwan | Experience Design
                        <img src="assets/projects/cube-hotel.jpg" alt="" class="img-responsive">
                        <div class="desc">
                            <h5><span>CUBE&nbsp;Hotel</span></h5>
-                           <p>Concept Design - Competition</p>
+                           <p>Concept Design</p>
                        </div>
                    </a>
                 </div>
