fix image extensions

--- a/projects/curiosityinfocus.html
+++ b/projects/curiosityinfocus.html
@@ -11,13 +11,13 @@ images:
     title: Curiosity in Focus
   - image_path: ../assets/projects/curiosityinfocus/2.jpg
     title: Curiosity in Focus
-  - image_path: ../assets/projects/curiosityinfocus/3.jpg
+  - image_path: ../assets/projects/curiosityinfocus/3.png
     title: Curiosity in Focus
-  - image_path: ../assets/projects/curiosityinfocus/4.jpg
+  - image_path: ../assets/projects/curiosityinfocus/4.png
     title: Curiosity in Focus
-  - image_path: ../assets/projects/curiosityinfocus/5.jpg
+  - image_path: ../assets/projects/curiosityinfocus/5.png
     title: Curiosity in Focus
-  - image_path: ../assets/projects/curiosityinfocus/6.jpg
+  - image_path: ../assets/projects/curiosityinfocus/6.png
     title: Curiosity in Focus
   - image_path: ../assets/projects/curiosityinfocus/7.jpg
     title: Curiosity in Focus
